--- a/Hooked/AudioCard.xib
+++ b/Hooked/AudioCard.xib
@@ -1,18 +1,115 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="J2f-iM-IB6" customClass="AudioCard" customModule="Hooked" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kMM-aX-fkr">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lS-43-sYs">
+                    <rect key="frame" x="20" y="818" width="48" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbV-kF-kt5">
+                    <rect key="frame" x="362" y="844" width="32" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="32" id="UF2-zg-E46"/>
+                        <constraint firstAttribute="height" constant="32" id="jnR-Wa-D1V"/>
+                    </constraints>
+                    <state key="normal" image="info_icon"/>
+                    <connections>
+                        <action selector="infoBtnDidTap:" destination="J2f-iM-IB6" eventType="touchUpInside" id="OZy-ay-ggD"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WlS-pn-1rb">
+                    <rect key="frame" x="10" y="64" width="50" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LIKE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jD8-c2-PNI">
+                            <rect key="frame" x="8" y="0.0" width="34" height="40"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="jD8-c2-PNI" firstAttribute="top" secondItem="WlS-pn-1rb" secondAttribute="top" id="db1-nj-rQN"/>
+                        <constraint firstAttribute="trailing" secondItem="jD8-c2-PNI" secondAttribute="trailing" constant="8" id="eWj-Dh-90Q"/>
+                        <constraint firstAttribute="height" constant="40" id="gn0-Ib-Zij"/>
+                        <constraint firstItem="jD8-c2-PNI" firstAttribute="leading" secondItem="WlS-pn-1rb" secondAttribute="leading" constant="8" id="ibZ-Ob-9iP"/>
+                        <constraint firstAttribute="bottom" secondItem="jD8-c2-PNI" secondAttribute="bottom" id="mV2-VC-Yr6"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yV8-Rz-HPA">
+                    <rect key="frame" x="20" y="852" width="48" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZF-ld-K4m">
+                    <rect key="frame" x="342.5" y="64" width="61.5" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOPE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siw-co-8Hq">
+                            <rect key="frame" x="8" y="0.0" width="45.5" height="40"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="8Eh-IL-PUp"/>
+                        <constraint firstAttribute="trailing" secondItem="siw-co-8Hq" secondAttribute="trailing" constant="8" id="Ibi-2c-rxH"/>
+                        <constraint firstItem="siw-co-8Hq" firstAttribute="leading" secondItem="XZF-ld-K4m" secondAttribute="leading" constant="8" id="UDV-38-GHd"/>
+                        <constraint firstItem="siw-co-8Hq" firstAttribute="top" secondItem="XZF-ld-K4m" secondAttribute="top" id="bLF-nf-rX7"/>
+                        <constraint firstAttribute="bottom" secondItem="siw-co-8Hq" secondAttribute="bottom" id="kSM-63-YbM"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="AiK-do-Ycy" firstAttribute="trailing" secondItem="hbV-kF-kt5" secondAttribute="trailing" constant="20" id="5qL-q1-bp3"/>
+                <constraint firstItem="WlS-pn-1rb" firstAttribute="leading" secondItem="AiK-do-Ycy" secondAttribute="leading" constant="10" id="C3t-cG-i30"/>
+                <constraint firstItem="kMM-aX-fkr" firstAttribute="leading" secondItem="AiK-do-Ycy" secondAttribute="leading" id="Eti-tR-M13"/>
+                <constraint firstItem="XZF-ld-K4m" firstAttribute="top" secondItem="AiK-do-Ycy" secondAttribute="top" constant="20" id="Mhd-OK-RMy"/>
+                <constraint firstItem="WlS-pn-1rb" firstAttribute="top" secondItem="AiK-do-Ycy" secondAttribute="top" constant="20" id="NQQ-7C-66B"/>
+                <constraint firstItem="kMM-aX-fkr" firstAttribute="top" secondItem="J2f-iM-IB6" secondAttribute="top" id="WBK-vE-1tI"/>
+                <constraint firstItem="yV8-Rz-HPA" firstAttribute="leading" secondItem="AiK-do-Ycy" secondAttribute="leading" constant="20" id="czx-Ht-LdM"/>
+                <constraint firstAttribute="bottom" secondItem="hbV-kF-kt5" secondAttribute="bottom" constant="20" id="dOA-SM-NwF"/>
+                <constraint firstItem="AiK-do-Ycy" firstAttribute="trailing" secondItem="XZF-ld-K4m" secondAttribute="trailing" constant="10" id="gjC-aK-voX"/>
+                <constraint firstAttribute="bottom" secondItem="kMM-aX-fkr" secondAttribute="bottom" id="h6a-qm-zfW"/>
+                <constraint firstItem="kMM-aX-fkr" firstAttribute="trailing" secondItem="AiK-do-Ycy" secondAttribute="trailing" id="lsz-8V-6c0"/>
+                <constraint firstAttribute="bottom" secondItem="yV8-Rz-HPA" secondAttribute="bottom" constant="20" id="maj-pV-NW9"/>
+                <constraint firstItem="yV8-Rz-HPA" firstAttribute="top" secondItem="5lS-43-sYs" secondAttribute="bottom" constant="10" id="oZO-Gg-29u"/>
+                <constraint firstItem="5lS-43-sYs" firstAttribute="leading" secondItem="AiK-do-Ycy" secondAttribute="leading" constant="20" id="uT8-4p-9aq"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="AiK-do-Ycy"/>
+            <connections>
+                <outlet property="infoButton" destination="hbV-kF-kt5" id="H0I-FZ-SQF"/>
+                <outlet property="likeLbl" destination="jD8-c2-PNI" id="Rwi-JS-d7q"/>
+                <outlet property="likeView" destination="WlS-pn-1rb" id="8dc-bg-aCC"/>
+                <outlet property="nopeLbl" destination="siw-co-8Hq" id="7xe-8r-n5a"/>
+                <outlet property="nopeView" destination="XZF-ld-K4m" id="2qL-1g-Y7A"/>
+                <outlet property="photo" destination="kMM-aX-fkr" id="OHd-Ai-F2b"/>
+                <outlet property="titleLbl" destination="5lS-43-sYs" id="Ohp-YH-UcB"/>
+                <outlet property="usernameLbl" destination="yV8-Rz-HPA" id="67i-RM-cKn"/>
+            </connections>
+            <point key="canvasLocation" x="131.8840579710145" y="121.875"/>
         </view>
     </objects>
+    <resources>
+        <image name="info_icon" width="100" height="100"/>
+    </resources>
 </document>
