--- a/Hooked/Base.lproj/Main.storyboard
+++ b/Hooked/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wp1-yt-Rfc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wp1-yt-Rfc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -169,7 +169,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVP-Sp-DbV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3787" y="1477"/>
+            <point key="canvasLocation" x="4510" y="1477"/>
         </scene>
         <!--Radar View Controller-->
         <scene sceneID="8LZ-LA-LeV">
@@ -1038,7 +1038,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xQe-yM-L8X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3045" y="1477"/>
+            <point key="canvasLocation" x="3787" y="1477"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="Rzn-sN-5fH">
@@ -1049,7 +1049,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5xo-ZI-rbU">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="802"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="ek0-7c-GZP">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
@@ -1161,7 +1161,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="5xo-ZI-rbU" firstAttribute="top" secondItem="5XW-cL-2ap" secondAttribute="top" id="Iwd-cm-Yrv"/>
-                            <constraint firstAttribute="bottom" secondItem="5xo-ZI-rbU" secondAttribute="bottom" id="UDN-vi-Ryl"/>
+                            <constraint firstAttribute="bottom" secondItem="5xo-ZI-rbU" secondAttribute="bottom" constant="50" id="UDN-vi-Ryl"/>
                             <constraint firstItem="5xo-ZI-rbU" firstAttribute="leading" secondItem="5XW-cL-2ap" secondAttribute="leading" id="XoY-Wa-iEz"/>
                             <constraint firstItem="5xo-ZI-rbU" firstAttribute="trailing" secondItem="5XW-cL-2ap" secondAttribute="trailing" id="Xox-Ot-GDe"/>
                         </constraints>
@@ -1207,6 +1207,13 @@
                     <nil key="simulatedTopBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ExF-yy-xA5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eMG-aM-huZ">
+                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="5tE-fo-nPK"/>
+                        <constraint firstAttribute="width" constant="60" id="srW-8S-x61"/>
+                    </constraints>
+                </imageView>
             </objects>
             <point key="canvasLocation" x="3341" y="2174"/>
         </scene>
@@ -1272,7 +1279,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljm-rV-R7R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1793" y="1477"/>
+            <point key="canvasLocation" x="1793" y="1493"/>
         </scene>
         <!--Discover-->
         <scene sceneID="zaC-5V-Axh">
@@ -1512,7 +1519,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="450-41-uWJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3045" y="802"/>
+            <point key="canvasLocation" x="3787" y="802"/>
         </scene>
         <!--Upload Table View Controller-->
         <scene sceneID="50z-A9-05d">
@@ -2004,6 +2011,124 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d08-4o-996" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2618.840579710145" y="2858.7053571428569"/>
+        </scene>
+        <!--Audio Radar View Controller-->
+        <scene sceneID="N66-0s-yzd">
+            <objects>
+                <viewController storyboardIdentifier="AudioRadarViewController" id="JLh-B3-f34" customClass="AudioRadarViewController" customModule="Hooked" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C4b-FV-BGZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QDd-1b-V46">
+                                <rect key="frame" x="35" y="84" width="344" height="658"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uVW-PX-afb">
+                                <rect key="frame" x="0.0" y="762" width="414" height="100"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_nope" translatesAutoresizingMaskIntoConstraints="NO" id="hxj-UZ-6RJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="138" height="100"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="super_like_circle" translatesAutoresizingMaskIntoConstraints="NO" id="8d4-sG-wIe">
+                                        <rect key="frame" x="138" y="0.0" width="138" height="100"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="like_circle" translatesAutoresizingMaskIntoConstraints="NO" id="Tl7-SY-GP9">
+                                        <rect key="frame" x="276" y="0.0" width="138" height="100"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="jJj-MS-jzC"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="XzU-l9-90K" firstAttribute="trailing" secondItem="QDd-1b-V46" secondAttribute="trailing" constant="35" id="2pM-TS-WYV"/>
+                            <constraint firstItem="uVW-PX-afb" firstAttribute="bottom" secondItem="XzU-l9-90K" secondAttribute="bottom" id="5b7-nB-Qce"/>
+                            <constraint firstItem="QDd-1b-V46" firstAttribute="leading" secondItem="XzU-l9-90K" secondAttribute="leading" constant="35" id="COa-Tx-95n"/>
+                            <constraint firstItem="uVW-PX-afb" firstAttribute="top" secondItem="QDd-1b-V46" secondAttribute="bottom" constant="20" id="V3S-nJ-9IL"/>
+                            <constraint firstItem="QDd-1b-V46" firstAttribute="top" secondItem="XzU-l9-90K" secondAttribute="top" constant="40" id="crL-wg-YjE"/>
+                            <constraint firstItem="uVW-PX-afb" firstAttribute="leading" secondItem="XzU-l9-90K" secondAttribute="leading" id="xhi-jG-Eal"/>
+                            <constraint firstItem="XzU-l9-90K" firstAttribute="trailing" secondItem="uVW-PX-afb" secondAttribute="trailing" id="yME-J4-Tpj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XzU-l9-90K"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zP2-DZ-A2b"/>
+                    <connections>
+                        <outlet property="cardStack" destination="QDd-1b-V46" id="Rqz-Kf-c6f"/>
+                        <outlet property="likeImg" destination="Tl7-SY-GP9" id="3wW-Wo-KCG"/>
+                        <outlet property="nopeImg" destination="hxj-UZ-6RJ" id="zoU-nB-bzv"/>
+                        <outlet property="superLikeImg" destination="8d4-sG-wIe" id="Qiw-mD-LMl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G4B-2e-yLJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3045" y="802"/>
+        </scene>
+        <!--Likes Table View Controller-->
+        <scene sceneID="xmZ-QS-18T">
+            <objects>
+                <tableViewController storyboardIdentifier="LikesTableViewController" id="zXj-6k-4De" customClass="LikesTableViewController" customModule="Hooked" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="UWs-qM-FtM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LikesAudioTableViewCell" rowHeight="94" id="VxR-it-b89" customClass="LikesAudioTableViewCell" customModule="Hooked" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="94"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VxR-it-b89" id="sSi-Fg-hiM">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kTS-w0-enb">
+                                            <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="Ote-Pm-mVJ"/>
+                                                <constraint firstAttribute="height" constant="60" id="dbJ-hs-vMt"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptf-sw-ZpG">
+                                            <rect key="frame" x="95" y="36" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gg-Hf-mdN">
+                                            <rect key="frame" x="95" y="62" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="kTS-w0-enb" firstAttribute="top" secondItem="sSi-Fg-hiM" secondAttribute="top" constant="20" id="97H-Cq-nyB"/>
+                                        <constraint firstItem="2Gg-Hf-mdN" firstAttribute="top" secondItem="Ptf-sw-ZpG" secondAttribute="bottom" constant="5" id="N3t-C9-av7"/>
+                                        <constraint firstItem="Ptf-sw-ZpG" firstAttribute="top" secondItem="sSi-Fg-hiM" secondAttribute="topMargin" constant="25" id="SFP-gK-1Lt"/>
+                                        <constraint firstItem="Ptf-sw-ZpG" firstAttribute="leading" secondItem="kTS-w0-enb" secondAttribute="trailing" constant="15" id="iuW-ne-4ec"/>
+                                        <constraint firstItem="2Gg-Hf-mdN" firstAttribute="leading" secondItem="kTS-w0-enb" secondAttribute="trailing" constant="15" id="zF2-pT-gXr"/>
+                                        <constraint firstItem="kTS-w0-enb" firstAttribute="leading" secondItem="sSi-Fg-hiM" secondAttribute="leading" constant="20" id="ziJ-pS-CgB"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="artistLbl" destination="2Gg-Hf-mdN" id="cZS-HR-jYL"/>
+                                    <outlet property="avatar" destination="kTS-w0-enb" id="exY-d0-cFc"/>
+                                    <outlet property="titleLbl" destination="Ptf-sw-ZpG" id="0k3-bE-AZZ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="zXj-6k-4De" id="suy-hD-rnI"/>
+                            <outlet property="delegate" destination="zXj-6k-4De" id="Zrg-Ji-e1V"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="pGt-j7-Rfv"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tpc-q8-ygK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3045" y="1493"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
